--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <body class="antialiased">
     <header class="container mx-auto px-4 py-6 flex justify-between items-center">
         <div class="header-logo">
-            L <span class="text-gray-600">Leandro Barrios Designer.</span>
+            LBD <span class="text-gray-600">Leandro Barrios Designer.</span>
         </div>
         <!-- Botón DESCARGAR CV en el header con el nuevo estilo -->
         <a href="#contacto" class="button-80" role="button">CONTACTO</a>
