--- a/page.html
+++ b/page.html
@@ -265,7 +265,7 @@
             </div>
             <div class="lg:col-span-1 flex justify-center lg:justify-end">
                 <!-- Puedes añadir una imagen grande o un elemento visual aquí si lo deseas -->
-                <img src="https://placehold.co/600x400/E0E0E0/333333?text=Tu+Imagen+Principal" alt="Imagen principal de portafolio" class="rounded-xl shadow-lg w-full max-w-md">
+                <img src="https://placehold.co/600x400/E0E0E0/333333?text=Tu+Imagen+Principal" alt="Imagen principal de portafolio" class="shadow-lg w-full max-w-md">
             </div>
         </section>
 
